[project]
name = "tutorial-on-graph-rag-with-neo4j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.13",
    "langchain-classic>=1.0.3",
    "langchain-google-genai>=4.2.1",
    "neo4j>=6.1.0",
]
